--- a/css/style.css
+++ b/css/style.css
@@ -54,11 +54,13 @@ a {
   align-items: center;
   justify-content: center;
   text-align: center;
+  
 }
 
 .header-nav li {
   font-size: 24px;
   margin: 0 20px;
+  text-align: center;
 }
 
 /* main */
@@ -208,6 +210,11 @@ footer .copyright{
  }
  .header-subtitle {
   font-size: 18px;
+ }
+
+ .header-nav ul {
+  text-align: center;
+  padding: 0;
  }
  /*  下層ページのheader */
  .sub-header-inner {
